<resources>
    <string name="app_name">CoLivingPilot</string>
    <string name="label_button_login">Einloggen</string>
    <string name="label_button_create_account">Account erstellen</string>
    <string name="label_textview_welcome">Willkommen bei CoLivingPilot!</string>
    <string name="label_textview_login_title">Login</string>
    <string name="hint_textfield_password">Passwort</string>
    <string name="hint_textfield_username">Username</string>
    <string name="hint_textfield_email">E-Mail</string>
    <string name="hint_textfield_password_repeat">Passwort wiederholen</string>
    <string name="snackbar_login_successful">Erfolgreich eingeloggt</string>
    <string name="snackbar_login_unsuccessful">Login fehlgeschlagen</string>
    <string name="snackbar_something_went_wrong">Etwas ist schiefgelaufen</string>
    <string name="snackbar_register_successful">Erfolgreich registriert</string>
    <string name="snackbar_register_unsuccessful">Registrierung fehlgeschlagen</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tasks_menu_item">Aufgaben</string>

    <string name="settings_menu_item">Einstellungen</string>

    <string name="text_descr_profile_picture">Profilbild</string>

    //actions
    <string name="delete">Löschen</string>
    <string name="edit">Bearbeiten</string>
    <string name="add">Hinzufügen</string>
    <string name="save">Speichern</string>
    <string name="cancel">Abbrechen</string>


    //settings
    <string name="wg_name_changed">WG Name geändert</string>

    <!-- res/values/strings.xml -->

    <!-- Basic Preferences -->
    <string name="basic_preferences">Basic Preferences</string>
    <string name="title_basic_preference">Basic Preference</string>
    <string name="summary_basic_preference">Summary for Basic Preference</string>

    <string name="title_stylish_preference">Stylish Preference</string>
    <string name="summary_stylish_preference">Summary for Stylish Preference</string>

    <string name="title_icon_preference">Icon Preference</string>
    <string name="summary_icon_preference">Summary for Icon Preference</string>

    <string name="title_single_line_title_preference">Single Line Title Preference</string>
    <string name="summary_single_line_title_preference">Summary for Single Line Title Preference</string>

    <!-- Widgets -->
    <string name="widgets">Widgets</string>

    <string name="title_checkbox_preference">Checkbox Preference</string>
    <string name="summary_checkbox_preference">Summary for Checkbox Preference</string>

    <string name="title_switch_preference">Switch Preference</string>
    <string name="summary_switch_preference">Summary for Switch Preference</string>

    <string name="title_dropdown_preference">Dropdown Preference</string>

    <string-array name="entries">
        <item>Option 1</item>
        <item>Option 2</item>
        <item>Option 3</item>
    </string-array>

    <string-array name="entry_values">
        <item>value1</item>
        <item>value2</item>
        <item>value3</item>
    </string-array>

    <string name="title_seekbar_preference">Seekbar Preference</string>

    <!-- Dialogs -->
    <string name="dialogs">Dialogs</string>

    <string name="title_edittext_preference">EditText Preference</string>
    <string name="dialog_title_edittext_preference">Edit Text</string>

    <string name="title_list_preference">List Preference</string>
    <string name="dialog_title_list_preference">List Preference</string>

    <string name="title_multi_list_preference">Multi-List Preference</string>
    <string name="summary_multi_list_preference">Summary for Multi-List Preference</string>
    <string name="dialog_title_multi_list_preference">Multi-List Preference</string>

    <!-- Advanced Attributes -->
    <string name="advanced_attributes">Advanced Attributes</string>

    <string name="title_expandable_preference">Expandable Preference</string>
    <string name="summary_expandable_preference">Summary for Expandable Preference</string>

    <string name="title_intent_preference">Intent Preference</string>
    <string name="summary_intent_preference">Summary for Intent Preference</string>

    <string name="title_parent_preference">Parent Preference</string>
    <string name="summary_parent_preference">Summary for Parent Preference</string>

    <string name="title_child_preference">Child Preference</string>
    <string name="summary_child_preference">Summary for Child Preference</string>

    <string name="title_toggle_summary_preference">Toggle Summary Preference</string>
    <string name="summary_on_toggle_summary_preference">On Summary for Toggle Summary Preference</string>
    <string name="summary_off_toggle_summary_preference">Off Summary for Toggle Summary Preference</string>

    <string name="title_copyable_preference">Copyable Preference</string>
    <string name="summary_copyable_preference">Summary for Copyable Preference</string>


    //shoppingList
    <string name="shoppinglist_menu_item">Einkaufsliste</string>
    <string name="shoppingList_item_title">Was brauchst du?</string>
    <string name="shoppingList_item_notes">Etwas genauer bitte!</string>
    <string name="shoppingList_add_btn">Hinzufügen</string>
    <string name="dialog_title_add_item">Neues Element hinzufügen</string>
    <string name="dialog_title_full_note">Vollständige Notiz</string>
    <string name="dialog_cancel">Abbrechen</string>
    <string name="dialog_ready">Fertig</string>

    <string name="joined_wg_title">Du bist der WG \"%s\" beigetreten!</string>
    <string name="created_wg_title">Du hast die WG \"%s\" erstellt!</string>
    <string name="done">Erledigt</string>
    <string name="join_wg">Tritt einer WG bei</string>
    <string name="qr_code_scan">QR-Code scannen</string>
    <string name="or">– oder –</string>
    <string name="invite">Einladungs-Code</string>
    <string name="join_wg_btn">Beitreten</string>
    <string name="create_wg">Erstelle eine WG</string>
    <string name="number_of_members">Anzahl der Mitglieder</string>
    <string name="create">Erstellen</string>
    <string name="in_ein_besseres_nwg_leben_starten">In ein besseres\nWG-Leben starten</string>
    <string name="erstelle_eine_wg_oder_tritt_einer_bestehenden_wg_bei">Erstelle eine WG oder tritt einer bestehenden WG bei.</string>
    <string name="new_task">Neue Aufgabe</string>
    <string name="notes">Notizen</string>
    <string name="number_of_beerchens">Bierchen:</string>
    <string name="title">Title</string>
    <string name="notes_preview">Notizvorschau...</string>
    <string name="notes_full_view">Volle Notiz...</string>

</resources>