<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewDialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Title Input -->
        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shoppingList_item_title"
            android:inputType="text"
            android:maxLines="1"
            android:layout_marginBottom="16dp" />

        <!-- Notes Input -->
        <EditText
            android:id="@+id/editTextNotes"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:hint="@string/shoppingList_item_notes"
            android:inputType="textMultiLine"
            android:layout_marginBottom="16dp"
            android:gravity="top"
            android:layout_gravity="top"
            android:layout_weight="1" />

        <!-- Buttons (Add and Cancel) -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="16dp"
                android:src="@drawable/baseline_check_circle_24"
                android:text="@string/shoppingList_add_btn"
                />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnCancel"
                android:src="@drawable/baseline_cancel_24"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="16dp"
                android:text="@string/shoppingList_cancel" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
